fix: initial loading spinner not centered (for suspense fallback) (#1422)

--- a/client/src/app/components/Spinner.scss
+++ b/client/src/app/components/Spinner.scss
@@ -2,6 +2,19 @@
 @import "../../scss/mixins";
 @import "../../scss/variables";
 
+.fixed-center-page {
+    background: var(--body-background);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .spinner {
     position: relative;
     top: 20px;
